--- a/css/reset.css
+++ b/css/reset.css
@@ -2,6 +2,14 @@ ul, li {
     margin: 0;
     padding: 0;
 }
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: normal;
+}
 
 /* Document
    ========================================================================== */
@@ -73,7 +81,6 @@ hr {
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-
 pre {
     font-family: monospace, monospace;
     /* 1 */
@@ -87,7 +94,6 @@ pre {
 /**
  * Remove the gray background on active links in IE 10.
  */
-
 a {
     background-color: transparent;
 }
@@ -96,7 +102,6 @@ a {
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
-
 abbr[title] {
     border-bottom: none;
     /* 1 */
