--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -2,48 +2,43 @@
 
 @font-face {
    font-family: 'Gabelisa';
-   src: url('fonts/Gabelisa.eot');
-   src: local('☺'), url('fonts/Gabelisa.woff') format('woff'), url('fonts/Gabelisa.ttf') format('truetype'), url('fonts/Gabelisa.svg') format('svg');
+   src: local('☺'), url('fonts/Gabelisa.woff') format('woff'), 
+   url('fonts/Gabelisa.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Fredericka';
-   src: url('fonts/FrederickatheGreat-Regular.eot');
-   src: local('☺'), url('fonts/FrederickatheGreat-Regular.woff') format('woff'), url('fonts/FrederickatheGreat-Regular.ttf') format('truetype'), url('fonts/FrederickatheGreat-Regular.svg') format('svg');
+   src: local('☺'), url('fonts/FrederickatheGreat-Regular.woff') format('woff'), url('fonts/FrederickatheGreat-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: url('fonts/Montserrat-Bold.eot');
-   src: local('☺'), url('fonts/Montserrat-Bold.woff') format('woff'), url('fonts/Montserrat-Bold.ttf') format('truetype'), url('fonts/Montserrat-Bold.svg') format('svg');
+   src: local('☺'), url('fonts/Montserrat-Bold.woff') format('woff'), url('fonts/Montserrat-Bold.ttf') format('truetype');
    font-weight: 700;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: url('fonts/Montserrat-ExtraBold.eot');
-   src: local('☺'), url('fonts/Montserrat-ExtraBold.woff') format('woff'), url('fonts/Montserrat-ExtraBold.ttf') format('truetype'), url('fonts/Montserrat-ExtraBold.svg') format('svg');
+   src: local('☺'), url('fonts/Montserrat-ExtraBold.woff') format('woff'), url('fonts/Montserrat-ExtraBold.ttf') format('truetype');
    font-weight: 800;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: url('fonts/Montserrat-Regular.eot');
-   src: local('☺'), url('fonts/Montserrat-Regular.woff') format('woff'), url('fonts/Montserrat-Regular.ttf') format('truetype'), url('fonts/Montserrat-Regular.svg') format('svg');
+   src: local('☺'), url('fonts/Montserrat-Regular.woff') format('woff'), url('fonts/Montserrat-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: url('fonts/Montserrat-Medium.eot');
-   src: local('☺'), url('fonts/Montserrat-Medium.woff') format('woff'), url('fonts/Montserrat-Medium.ttf') format('truetype'), url('fonts/Montserrat-Medium.svg') format('svg');
+   src: local('☺'), url('fonts/Montserrat-Medium.woff') format('woff'), url('fonts/Montserrat-Medium.ttf') format('truetype');
    font-weight: 500;
    font-style: normal;
 }
