--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,18 @@ html {
   text-transform: uppercase;
 }
 
+.active {
+  visibility: visible !important;
+}
+
+.unactive {
+  visibility: hidden !important;
+  width: 1px;
+  height: 1px;
+}
+
 .header {
+  position: relative;
   height: 100vh;
   margin-bottom: 8rem;
   min-height: 700px;
@@ -34,8 +45,6 @@ html {
   height: 20vh;
   min-height: 140px;
   max-height: 216px;
-  margin: 0 58px;
-  padding-top: 40px;
   font-size: 1.6rem;
 }
 
@@ -57,12 +66,17 @@ html {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: 18px;
+  margin: 0 58px 18px;
+  padding-top: 40px;
 }
 
 .navbar-top-row__logo h1 {
   font-size: 2px;
   color: transparent;
+}
+
+.navbar-top-row__burger {
+  display: none;
 }
 
 .navbar-phone {
@@ -75,14 +89,14 @@ html {
   font-weight: 700;
   text-align: right;
   padding-top: 5px;
-  font-size: 1.7rem;
-  line-height: 2.1rem;
+  font-size: 17px;
+  line-height: 21px;
 }
 
 .navbar-phone__number {
   font-weight: 700;
-  font-size: 2.9rem;
-  line-height: 3.1rem;
+  font-size: 29px;
+  line-height: 31px;
 }
 
 .navbar-phone__phone-pic {
@@ -92,7 +106,7 @@ html {
 }
 
 .navbar-nav-row {
-  margin-bottom: 10px;
+  margin: 0 58px 10px;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 3.33px;
@@ -305,9 +319,6 @@ html {
     max-height: 688px;
     padding-bottom: 25px;
   }
-  .navbar-nav-row {
-    margin-bottom: 40px;
-  }
   .hero-article {
     padding-left: 15px;
     padding-right: 15px;
@@ -332,8 +343,6 @@ html {
   .header__navbar {
     min-height: 120px;
     max-height: 160px;
-    margin: 0 30px;
-    padding-top: 20px;
   }
   .header__hero {
     min-height: 480px;
@@ -341,7 +350,16 @@ html {
     padding-bottom: 25px;
   }
   .navbar-top-row {
-    margin-bottom: 35px;
+    margin: 0 30px 35px;
+    padding-top: 20px;
+  }
+  .navbar-nav-row {
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 3.33px;
+  }
+  .navbar-nav-row__li {
+    margin-right: 35px;
   }
   .hero-block__dish {
     background: url(../images/hero-pasta.png) center/contain no-repeat;
@@ -416,13 +434,80 @@ html {
     min-height: 467px;
     max-height: 680px;
     position: relative;
+    top: 0;
+    left: 0;
     margin: 0;
+    z-index: 2;
+  }
+  .navbar-top-row {
+    z-index: 11;
+  }
+  .navbar-top-row_active {
+    margin: 0;
+    position: fixed;
+    padding: 20px 30px 0 0;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    background-color: #eee;
+    opacity: .85;
+  }
+  .navbar-top-row__logo {
+    position: relative;
+    z-index: 2;
+    max-height: 100px;
+    visibility: visible;
   }
   .navbar-top-row__phone {
-    display: none;
+    position: absolute;
+    top: 20%;
+    left: 0;
+    width: 100%;
+    visibility: hidden;
+  }
+  .navbar-top-row__burger {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin: 15px 15px 0 0;
+  }
+  .navbar-top-row__burger img {
+    width: 50px;
+    height: 50px;
+  }
+  .navbar-phone {
+    width: 244px;
+    margin: 0 auto;
   }
   .navbar-nav-row {
-    display: none;
+    position: fixed;
+    left: 0;
+    top: 40%;
+    width: 100%;
+    text-align: center;
+    z-index: 15;
+    margin: 0;
+    visibility: hidden;
+  }
+  .navbar-nav-row__ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .navbar-nav-row__li {
+    margin-bottom: 35px;
+    margin-right: 0;
+  }
+  .navbar-nav-row__li a {
+    font-size: 3rem;
   }
   .hero-article {
     margin: 0 auto;
@@ -493,6 +578,18 @@ html {
     max-height: 560px;
     position: relative;
     margin: 0;
+  }
+  .navbar-top-row__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .navbar-top-row__logo img {
+    width: 80%;
+    max-width: 300px;
   }
   .hero-article {
     margin: 0 auto;
