--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ html {
 
 .active {
   visibility: visible !important;
+  -webkit-transition: opacity 1s ease 0.6s;
+  transition: opacity 1s ease 0.6s;
+  opacity: 1 !important;
 }
 
 .unactive {
@@ -442,18 +445,28 @@ html {
   .navbar-top-row {
     z-index: 11;
   }
+  .navbar-top-row_unactive {
+    max-height: 14vh;
+    background-color: #fff !important;
+    -webkit-transition: max-height 0.6s ease;
+    transition: max-height 0.6s ease;
+  }
   .navbar-top-row_active {
     margin: 0;
     position: fixed;
     padding: 20px 30px 0 0;
     width: 100%;
     height: 100vh;
+    max-height: 100vh;
     left: 0;
     top: 0;
     background-color: #eee;
     opacity: .85;
+    -webkit-transition: max-height 0.6s ease;
+    transition: max-height 0.6s ease;
   }
   .navbar-top-row__logo {
+    color: transparent;
     position: relative;
     z-index: 2;
     max-height: 100px;
@@ -468,9 +481,10 @@ html {
   }
   .navbar-top-row__burger {
     display: block;
+    position: relative;
     width: 50px;
     height: 50px;
-    margin: 15px 15px 0 0;
+    margin-top: 15px;
   }
   .navbar-top-row__burger img {
     width: 50px;
@@ -489,6 +503,9 @@ html {
     z-index: 15;
     margin: 0;
     visibility: hidden;
+    opacity: 0.1;
+    -webkit-transition: opacity  1s ease 0.6s;
+    transition: opacity  1s ease 0.6s;
   }
   .navbar-nav-row__ul {
     display: -webkit-box;
@@ -613,6 +630,12 @@ html {
   }
   .hero-decorations__tomat {
     display: none;
+  }
+}
+
+@media (max-height: 500px) {
+  .navbar-nav-row__li {
+    margin-bottom: 15px;
   }
 }
 
