--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -464,21 +464,24 @@
   }
 
   .navbar-top-row {
-    
+
     &_active {
       margin: 0;
       position: fixed;
       padding: 20px 30px 0 0;
       width: 100%;
       height: 100vh;
+      max-height: 100vh;
       left: 0; top: 0;
       background-color: #eee;
       opacity: .85;
+      transition: background-color 0.6s ease;
     }
     
     z-index: 11;
 
     &__logo {
+      color: transparent;
       position: relative;
       z-index: 2;
       max-height: 100px;
@@ -494,11 +497,12 @@
 
     &__burger {
       display: block;
+      position: relative;
       width: 50px;
       height: 50px;
-      margin: 15px 15px 0 0;
+      margin-top: 15px;
 
-      &_active {
+      &_active {       
         //change bg
       }
       
@@ -524,6 +528,8 @@
     z-index: 15;
     margin: 0;
     visibility: hidden;
+    opacity: 0.1;
+    transition: opacity  1s ease 0.6s;
     
     &__ul {
       display: flex;
@@ -531,8 +537,7 @@
       align-items:center;
     }
 
-    &__li {
-      
+    &__li {      
       margin-bottom: 35px;
       margin-right: 0;
 
@@ -675,6 +680,14 @@
   .hero-decorations {
     &__tomat {
       display: none;
+    }
+  }
+}
+
+@media (max-height: 500px) {
+  .navbar-nav-row {
+    &__li {
+      margin-bottom: 15px;
     }
   }
 }
