--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,6 +19,9 @@ html {
 
 .active {
    visibility: visible !important;
+   transition: opacity 1s ease 0.6s;
+   opacity: 1 !important;
+  
 }
 
 .unactive {
