--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,16 @@ html {
 
 .active {
   visibility: visible !important;
+  opacity: 1 !important;
   -webkit-transition: opacity 1s ease 0.6s;
   transition: opacity 1s ease 0.6s;
-  opacity: 1 !important;
 }
 
 .unactive {
   visibility: hidden !important;
   width: 1px;
   height: 1px;
+  opacity: 0 !important;
 }
 
 .header {
@@ -80,6 +81,11 @@ html {
 
 .navbar-top-row__burger {
   display: none;
+  width: 50px;
+  height: 50px;
+  background: url(../images/icons/burger-icon.svg) center/contain no-repeat;
+  -webkit-transition: background-image 0.5s ease 0.2s;
+  transition: background-image 0.5s ease 0.2s;
 }
 
 .navbar-phone {
@@ -445,25 +451,18 @@ html {
   .navbar-top-row {
     z-index: 11;
   }
-  .navbar-top-row_unactive {
-    max-height: 14vh;
-    background-color: #fff !important;
-    -webkit-transition: max-height 0.6s ease;
-    transition: max-height 0.6s ease;
-  }
   .navbar-top-row_active {
     margin: 0;
     position: fixed;
     padding: 20px 30px 0 0;
     width: 100%;
     height: 100vh;
-    max-height: 100vh;
     left: 0;
     top: 0;
     background-color: #eee;
     opacity: .85;
-    -webkit-transition: max-height 0.6s ease;
-    transition: max-height 0.6s ease;
+    -webkit-transition: background-color 0.6s ease;
+    transition: background-color 0.6s ease;
   }
   .navbar-top-row__logo {
     color: transparent;
@@ -473,22 +472,22 @@ html {
     visibility: visible;
   }
   .navbar-top-row__phone {
-    position: absolute;
+    position: fixed;
     top: 20%;
     left: 0;
     width: 100%;
+    z-index: 15;
     visibility: hidden;
+    opacity: 0;
   }
   .navbar-top-row__burger {
     display: block;
     position: relative;
-    width: 50px;
-    height: 50px;
+    z-index: 100;
     margin-top: 15px;
   }
-  .navbar-top-row__burger img {
-    width: 50px;
-    height: 50px;
+  .navbar-top-row__burger_active {
+    background: url(../images/icons/close-icon.svg) 0 0/contain no-repeat;
   }
   .navbar-phone {
     width: 244px;
@@ -503,9 +502,9 @@ html {
     z-index: 15;
     margin: 0;
     visibility: hidden;
-    opacity: 0.1;
-    -webkit-transition: opacity  1s ease 0.6s;
-    transition: opacity  1s ease 0.6s;
+    opacity: 0;
+    -webkit-transition: opacity 1s ease 0.6s;
+    transition: opacity 1s ease 0.6s;
   }
   .navbar-nav-row__ul {
     display: -webkit-box;
