--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,7 +26,10 @@ html {
 .unactive {
    visibility: hidden !important;
    width: 1px; height: 1px;
-}
+   opacity: 0 !important;
+}  
+
+
 
 @import '_header';
 @import '_fonts';
