--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -10,35 +10,35 @@
 
 @font-face {
    font-family: 'Fredericka';
-   src: local('☺'), url('fonts/FrederickatheGreat-Regular.woff') format('woff'), url('fonts/FrederickatheGreat-Regular.ttf') format('truetype');
+   src: local('☺'), url('fonts/FrederickatheGreat-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: local('☺'), url('fonts/Montserrat-Bold.woff') format('woff'), url('fonts/Montserrat-Bold.ttf') format('truetype');
+   src: local('☺'), url('fonts/Montserrat-Bold.woff') format('woff');
    font-weight: 700;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: local('☺'), url('fonts/Montserrat-ExtraBold.woff') format('woff'), url('fonts/Montserrat-ExtraBold.ttf') format('truetype');
+   src: local('☺'), url('fonts/Montserrat-ExtraBold.woff') format('woff');
    font-weight: 800;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: local('☺'), url('fonts/Montserrat-Regular.woff') format('woff'), url('fonts/Montserrat-Regular.ttf') format('truetype');
+   src: local('☺'), url('fonts/Montserrat-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: local('☺'), url('fonts/Montserrat-Medium.woff') format('woff'), url('fonts/Montserrat-Medium.ttf') format('truetype');
+   src: local('☺'), url('fonts/Montserrat-Medium.woff') format('woff');
    font-weight: 500;
    font-style: normal;
 }
