feat: add webpack and refactor folders nesting

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,7 @@ html {
    text-transform: uppercase;
 }
 
+@import '~normalize.css';
 @import '_header';
 @import '_fonts';
 @import '_top-dishes';
