--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -2,7 +2,7 @@
 
 @font-face {
    font-family: 'Gabelisa';
-   src: local('☺'), url('fonts/Gabelisa.woff') format('woff'), 
+   src: local('☺'), url('../assets/fonts/Gabelisa.woff') format('woff'), 
    url('fonts/Gabelisa.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
@@ -10,35 +10,35 @@
 
 @font-face {
    font-family: 'Fredericka';
-   src: local('☺'), url('fonts/FrederickatheGreat-Regular.woff') format('woff');
+   src: local('☺'), url('../assets/fonts/FrederickatheGreat-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: local('☺'), url('fonts/Montserrat-Bold.woff') format('woff');
+   src: local('☺'), url('../assets/fonts/Montserrat-Bold.woff') format('woff');
    font-weight: 700;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: local('☺'), url('fonts/Montserrat-ExtraBold.woff') format('woff');
+   src: local('☺'), url('../assets/fonts/Montserrat-ExtraBold.woff') format('woff');
    font-weight: 800;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: local('☺'), url('fonts/Montserrat-Regular.woff') format('woff');
+   src: local('☺'), url('../assets/fonts/Montserrat-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: local('☺'), url('fonts/Montserrat-Medium.woff') format('woff');
+   src: local('☺'), url('../assets/fonts/Montserrat-Medium.woff') format('woff');
    font-weight: 500;
    font-style: normal;
 }
