fix: rename main icon for correct source

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,7 +19,7 @@ html {
 
 @import '~normalize.css';
 @import '_header';
-@import '_fonts';
+// @import '_fonts';
 @import '_top-dishes';
 @import '_events';
 @import '_try-today';
